# Property

./: CMakeLists.txt  README.md
include/: log.h
include/cutils/: properties.h  sockets.h  threads.h
include/sys/: _system_properties.h  atomics.h
property/: properties.c  socket_inaddr_any_server.c  socket_local_client.c  socket_loopback_client.c  socket_loopback_server.c  socket_network_client.c  sockets.c  system_properties.c  util.c  util.h
property/server/: main.c  property_service.c
